--- a/Springboot-Microservice/daily-code-burn/pom.xml
+++ b/Springboot-Microservice/daily-code-burn/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>spring-native</artifactId>
 			<version>${spring-native.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-core</artifactId>
+		    <version>LATEST</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
